<?xml version="1.0"?>
<package>
  <name>lemto_actions</name>
  <version>0.5.0</version>
  <description>The lemto_actions package</description>
  <maintainer email="koenlek@todo.todo">koenlek</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>actionlib</run_depend>  
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  
</package>
