<?xml version="1.0"?>
<package>
  <name>lemto_description</name>
  <version>0.5.0</version>
  <description>The lemto_description package</description>
  <maintainer email="koenlekkerkerker@gmail.com">Koen Lekkerkerker</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>kobuki_description</run_depend>

</package>
