<?xml version="1.0"?>
<package>
  <name>lemto_gazebo</name>
  <version>0.5.0</version>
  <description>The lemto_gazebo package</description>
  <maintainer email="koenlekkerkerker@gmail.com">Koen Lekkerkerker</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- dependencies largely copied from turtlebot_gazebo -->
  <run_depend>yocs_cmd_vel_mux</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>kobuki_gazebo_plugins</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>lemto_description</run_depend>
  <run_depend>xacro</run_depend>

</package>
