<?xml version="1.0"?>
<package>
  <name>lemto_navigation</name>
  <version>0.5.0</version>
  <description>The lemto_navigation package</description>
  <maintainer email="koenlek@todo.todo">koenlek</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ecl_time</build_depend>
  <build_depend>lemto_topological_mapping</build_depend>
  <build_depend>move_base</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>  
  <run_depend>tf</run_depend> 
  <run_depend>lemto_topological_mapping</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>global_planner</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
  
</package>
