<?xml version="1.0"?>
<package>
  <name>lemtomap</name>
  <version>0.4.0</version>
  <description>The LEMTOMap metapackage</description>
  <maintainer email="koenlekkerkerker@gmail.com">Koen Lekkerkerker</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>st_bringup</run_depend>
  <run_depend>st_description</run_depend>
  <run_depend>st_gazebo</run_depend>
  <run_depend>st_gazebo</run_depend>
  <run_depend>st_gmapping_rolling</run_depend>
  <run_depend>st_map_server</run_depend>
  <run_depend>st_navigation</run_depend>
  <run_depend>st_tests</run_depend>
  <run_depend>st_topological_mapping</run_depend>
  <run_depend>st_tools</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
