<?xml version="1.0"?>
<package>
  <name>lemtomap</name>
  <version>0.5.0</version>
  <description>The LEMTOMap metapackage</description>
  <maintainer email="koenlekkerkerker@gmail.com">Koen Lekkerkerker</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>lemto_bringup</run_depend>
  <run_depend>lemto_description</run_depend>
  <run_depend>lemto_gazebo</run_depend>
  <run_depend>lemto_gazebo</run_depend>
  <run_depend>lemto_rw_gmapping</run_depend>
  <run_depend>lemto_map_server</run_depend>
  <run_depend>lemto_navigation</run_depend>
  <run_depend>lemto_launchers</run_depend>
  <run_depend>lemto_topological_mapping</run_depend>
  <run_depend>lemto_tools</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
