<package>
  <name>openslam_rw_gmapping</name>
  <version>0.5.0</version>
  <description>Rolling Window-ified, ROS-ified version of gmapping SLAM. Needed by Rolling Window GMapping (RW-GMapping). Forked from openslam_gmapping: https://github.com/ros-perception/openslam_gmapping</description>
  <maintainer email="koenlekkerkerker@gmail.com">Koen Lekkerkerker</maintainer>
  <license>BSD</license>

  <author>Koen Lekkerkerker</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
