<?xml version="1.0"?>
<package>
  <name>st_bringup</name>
  <version>0.3.1</version>
  <description>The st_bringup package</description>
  <maintainer email="koenlekkerkerker@gmail.com">Koen Lekkerkerker</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>zeroconf_avahi</run_depend>
  <run_depend>yocs_cmd_vel_mux</run_depend>
  <run_depend>kobuki_node</run_depend>
  <run_depend>kobuki_bumper2pc</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>
  <run_depend>st_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>openni_launch</run_depend>
  <run_depend>linux_hardware</run_depend>
  <run_depend>rocon_app_manager</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>urg_node</run_depend>

</package>
