<?xml version="1.0"?>
<package>
  <name>st_navigation</name>
  <version>0.0.0</version>
  <description>The st_navigation package</description>
  <maintainer email="koenlek@todo.todo">koenlek</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>  
  <run_depend>tf</run_depend> 

  <build_depend>st_topological_mapping</build_depend>
  <run_depend>st_topological_mapping</run_depend>
  
</package>
